--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ font-size:15px;
 			<textarea name="msg" class="input2" placeholder="Enter Your Message Here..." required></textarea>
 		
 				<input type="reset" name="Reset"  class="button2">
-			<input type="submit" name="submit" value="Send" class="button2">
+			<input type="submit" name="submit" value="submit" class="button2">
 			
 			
 		</form>
